--- a/restaurant/src/style.css
+++ b/restaurant/src/style.css
@@ -59,16 +59,18 @@ h1 {
     text-align: center;
 }
 #Bestburger {
-    margin-bottom:  40px;
-    font-size: 34px;
+    font-size: 44px;
+    font-family: mainfont;
+    margin: 0;
 }
 #Onlineorder {
     font-size: 28px;
     cursor: pointer;
+    font-family: mainfont;
 }
 #Onlineorder:hover{
     font-size: 30px;
-    text-shadow: 2px 2px black;
+    text-shadow: 1px 2px green;
     color: greenyellow;
 }
 #Passionmade {
@@ -95,6 +97,12 @@ footer {
     border-radius: 160px;
     border: 1px solid black;
 }
+#Homeimg:hover {
+    height: 275px;
+    width: 325px;
+    border-radius: 160px;
+    box-shadow: 1px 1px 9px 9px greenyellow;
+}
 footer {
     display: grid;
     align-items: center;
@@ -102,4 +110,63 @@ footer {
 }  
 #footercontent {
     font-size: 18px;
-} 
+}
+#contentone {
+    display: grid;
+    color: white;
+    grid-template-rows: 25% 75%;
+    width: 500px;
+    height: 600px;
+    background-color: rgba(0,0,0,.8);
+    border-radius: 16px;
+    overflow: auto;
+}
+#Innerdiv {
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+#menu {
+    font-size: 44px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    margin: 0;
+}
+#Menuitemone, #Menuitemtwo,#Menuitemthree,#Menuitemfour,#Menuitemfive,#Menuitemsix,#Menuitemseven {
+    height: 100px;
+    width: 120px;
+    border-radius: 160px;
+    border: 1px solid black;
+    margin: 10px;
+}
+#Menuitemone:hover, #Menuitemtwo:hover,#Menuitemthree:hover,#Menuitemfour:hover,#Menuitemfive:hover,#Menuitemsix:hover,#Menuitemseven:hover {
+    height: 105px;
+    width: 125px;
+    box-shadow: 3px 1px 3px 1px greenyellow;
+}
+#Menuone,#Menutwo,#Menuthree,#Menufour,#Menufive,#Menusix,#Menuseven {
+    padding-top: 10px;
+    text-align: center;
+    margin-left: 25px;
+    font-size: 18px;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  } 
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 0 16px 16px 0;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 0 16px 16px 0;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
