--- a/restaurant/src/style.css
+++ b/restaurant/src/style.css
@@ -133,6 +133,37 @@ footer {
     border-radius: 16px;
     overflow: auto;
 }
+#contentthree {
+    display: grid;
+    color: white;
+    grid-template-rows: 25% 55% 20%;
+    width: 500px;
+    max-width: 500px;
+    height: 600px;
+    background-color: rgba(0,0,0,.6);
+    border-radius: 16px;
+    overflow: auto;
+    align-items: center;
+    justify-content: center;
+}
+#Contactintro {
+    text-align: center;
+    font-size: 24px;
+    margin: 0;
+    font-family: mainfont;
+}
+#Contactlist {
+    font-size: 18px;
+    font-family: mainfont;
+}
+#Map {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    width: 400px;
+    background-color: rgba(0,0,0,.9);
+}
 #Innerdiv {
     display: grid;
     grid-template-columns: 70% 30%;
