--- a/restaurant/src/style.css
+++ b/restaurant/src/style.css
@@ -24,7 +24,7 @@ body {
     background-size: contain contain;
     background-repeat: no-repeat;
     height: 100vh;
-    background-color: black;
+    background-color: rgba(0,0,0,.98);
 }
 main {
     display: grid;
